[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
    "tf-keras>=2.16.0",
    "transformers>=4.52.4",
    "wordcloud>=1.9.4",
]
